# led-controller

./: .gitignore  Cargo.toml  README.md  cfg.toml
.github/workflows/: ci.yml
frontend/: color_panel.html  index.html  wifi_connection.html
led-controller/: Cargo.toml  index.html
led-controller/src/: config.rs  frontend.rs  http.rs  led.rs  main.rs  network.rs  types.rs  wifi_connection.rs
led-controller/src/frontend/: color_panel.rs  index.rs  wifi_connection.rs
src/: main.rs
workspace/hardware-agnostic-utils/: Cargo.toml
workspace/hardware-agnostic-utils/src/: lib.rs  types.rs  utils.rs
workspace/led-controller/src/: http.rs  main.rs  network.rs
workspace/led-controller/src/frontend/: index.rs  wifi_connection.rs
