[package]
name = "led-controller"
version = "0.1.0"
authors = ["Stefan Dangl <tzuzuzj@gmx.at>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "led-controller"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"
embedded-svc = "0.28"
serde = "1.0"
serde_json = "1.0"
smart-leds = "0.4"
ws2812-esp32-rmt-driver = { version = "0.12", features = ["smart-leds-trait"] }
thiserror = "2.0"

[build-dependencies]
embuild = "0.33"
